<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E8E8"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_your_order"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_product_number_to_start_tracking"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextSearch"
                android:layout_width="320dp"
                android:layout_height="56dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/seach_field"
                android:hint="@string/for_ex_ds12846758"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp" />

            <FrameLayout
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/scanner_icon_design">

                <ImageView
                    android:id="@+id/scan_button"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:importantForAccessibility="no"
                    android:src="@drawable/scanner"
                    app:tint="@color/white" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_services"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:maxLines="1"
                />
            <TextView
                android:id="@+id/seeAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="end"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"

            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="15dp"
                >

                <!-- Add cards inside the LinearLayout -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/deliveryCalculator"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="5dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    android:background="@drawable/horizontal_card"
                    >
                    <!-- Card content -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"

                        >
                        <ImageView
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:src="@drawable/menu"
                            android:layout_gravity="center"
                            android:layout_marginBottom="10dp"
                            app:tint="#F39C12" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Delivery Packers"
                            android:textSize="16sp"
                            android:layout_marginBottom="10dp"
                            android:textColor="@color/black"
                            android:maxLines="1"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Calculate -->"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:maxLines="1"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    android:background="@drawable/horizontal_card"
                    >
                    <!-- Card content -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"

                        >
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/truck"
                            android:layout_gravity="center"
                            android:layout_marginBottom="10dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Courier"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:maxLines="1"
                            android:layout_marginBottom="10dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="20+ couriers"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:maxLines="1"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    android:background="@drawable/horizontal_card"
                    >
                    <!-- Card content -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"

                        >
                        <ImageView
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:src="@drawable/documentation"
                            android:layout_gravity="center"
                            android:layout_marginBottom="10dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Documents"
                            android:textSize="16sp"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:maxLines="1"
                            android:layout_marginBottom="10dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="(44 packers available)"
                            android:textSize="12sp"
                            android:textColor="@color/black"
                            android:maxLines="1"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    android:background="@drawable/horizontal_card"
                    >
                    <!-- Card content -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"

                        >
                        <ImageView
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:src="@drawable/motorbike"
                            android:layout_gravity="center"
                            android:layout_marginBottom="10dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Vehicle"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:maxLines="1"
                            android:layout_marginBottom="10dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="(22 packers available)"
                            android:textSize="12sp"
                            android:textColor="@color/black"
                            android:maxLines="1"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>



            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Top Offers for you"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/offer_card_back_bg"
            android:elevation="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/offer_bg"
                    android:padding="8dp"
                    android:text="2 WHEELER"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/discountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="Flat Rs.20 OFF"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/codeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="use RIDE20"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/offer_img_bg"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:clipToPadding="true"
                    android:elevation="2dp"
                    android:gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/offerimg" />
            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Package or Service Type"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:maxLines="1"
                />
        </LinearLayout>
        <!-- res/layout/activity_main.xml -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delivery hai?"
                android:textColor="#B4DAFF"
                android:textSize="35sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ho Jayega!"
                android:textColor="#1B80E6"
                android:textSize="30sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/tracker"
                android:layout_marginTop="10dp"
                >
            </ImageView>
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>